Backend: address the sixth codex review round
Six findings.

- The native connect discarded every timeout it was given and waited out the
  OS TCP timeout instead -- minutes, when an address drops packets rather than
  refusing. A database URL's ten-second default therefore meant ten seconds in
  the JavaSE runtime and nothing at all on the device, so the same
  misconfiguration reads as a slow start in development and a hung process in
  production. Non-blocking connect with poll, and select on Windows.
- SIGPIPE was only ignored as a side effect of Signals.installShutdownHandler,
  which a server need never call. Its default action is to kill the process,
  and send() raises it when a client goes away mid-response, so a browser tab
  closing at the wrong moment took the server with it. Ignored at bind, where
  a server that listens cannot skip it, and MSG_NOSIGNAL on the write where
  the platform has it.
- An HTTP/2 request with more than 64 fields silently kept the first 64 and
  returned success, so the handler saw a request with a cookie or a tracing
  header simply missing. The stream is reset now, which is what HTTP/2 has in
  place of HTTP/1's 431.
- A suffix range over an empty file came back as a satisfiable {0, 0} and
  produced "Content-Range: bytes 0--1/0", which no client can read. Every
  range over a zero-length representation is unsatisfiable.
- cn1:backend-package created its work directories without emptying them, so
  a renamed or deleted source left its old .class behind for the translator to
  read -- and requireMainClass would accept a main class the module no longer
  had, packaging the previous implementation.
- The demo borrowed one pooled connection at startup and shared it across
  every request. The rest of the pool went unused, and statements from one
  request could land inside another's transaction: a plain addPet could be
  rolled back by an unrelated addPets that failed. Each operation borrows and
  returns its own now, with the in